--- a/css-flexbox-playlist-master/style.css
+++ b/css-flexbox-playlist-master/style.css
@@ -17,11 +17,14 @@ body{
     display: flex;
     background: white;
     flex-wrap: wrap;  
+    flex-flow: row-reverse;
+    justify-content: flex-start;
+    height: 800px;
 }
 
 .box{
     height: 100px;
-    flex: 1 0 200px;
+    flex: 0 0 100px;
 /*flex zastępuje - pierwsza wartość flex grow, druga wartosc flex shrink, trzecia wartosc flex basis*/
 
 }
