--- a/css-flexbox-playlist-master/style.css
+++ b/css-flexbox-playlist-master/style.css
@@ -10,40 +10,22 @@ body{
 .wrapper{
     width: 100%;
     max-width: 1200px;
-    margin: 0 auto;
 }
 
-.flex-container{
+#blocks{
     display: flex;
-    background: white;
-    flex-wrap: wrap;  
-    flex-flow: column;
-    height: 800px;
-  align-items: center; /*apply to cross axis*/
-  justify-content: ; /*apply to main axis*/
-
+    margin: 10px;
+    justify-content: space-between;
 }
 
-.box{
-    width: 100px;
+#blocks div{
     flex: 0 0 100px;
-/*flex zastępuje - pierwsza wartość flex grow, druga wartosc flex shrink, trzecia wartosc flex basis*/
-
+    padding: 40px 0;
+    text-align: center;
+    background: #ccc;
 }
 
-.one{
-    background: red;
-
-}
-.two{
-
-    background: blue;
-
-}
-
-.three{
-    background: green;
-
-
-}
-
+.one{order: 3}
+.two{order: 2}
+.three{order: 1;}
+.four{order: 0;}
